--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^5.10"
     },
@@ -21,6 +22,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
+        "pkboom/laravel-tinker-on-vscode": "^0.2.24",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
