--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
+        "laraveldaily/laravel-invoices": "^3.0",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
