--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.1",
         "anayarojo/shoppingcart": "^4.2",
         "appslabke/lara-izitoast": "^1.1",
+        "azate/laravel-telegram-login-auth": "^2.3",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-notification-channels/telegram": "^4.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.15",
