--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/telescope": "^4.15",
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
