--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.0",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "srmklive/paypal": "^3.0"
     },
